整合minitouch与minicap服务

--- a/web/modules/phone-detail/template.html
+++ b/web/modules/phone-detail/template.html
@@ -12,4 +12,4 @@ TBD: Detail view for
 <span>phoneNumber: {{$ctrl.device.phone.phoneNumber}}</span><br/>
 <p ng-click="$ctrl.onOpenScreenStream()">开始监视屏幕</p>
 <p ng-click="$ctrl.onCloseScreenStream()">停止监视屏幕</p>
-<device-screen display="$ctrl.device.display"><device-screen>
+<device-screen device="$ctrl.device" control="$ctrl.control"><device-screen>
