--- a/web/modules/phone-list/template.html
+++ b/web/modules/phone-list/template.html
@@ -3,6 +3,6 @@
       <span>设备串号：{{device.serial}}</span>
       <p>设备型号：{{device.model}}</p>
       <p ng-click="$ctrl.onControl(device.serial)">状态： {{device.usable | status }} </p>
-      <a href="#!/phones/{{device.serial}}">控制</a>
+      <a href="#!/phones/{{device.serial}}" ng-click="$ctrl.onControl(device.serial)">控制</a>
     </li>
   </ul>
